--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
     color: #ffffff;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     border-bottom: 2px solid #3a3a6d; /* Subtle border for distinction */
-    width: 100%;
+    width: 100vw;
   }
   .heading-container{
     width:70%
